--- a/lab5/makefile
+++ b/lab5/makefile
@@ -1,4 +1,5 @@
 all:
-	gcc -o cache lab5.c cache.c replace_policy.c -O3
+	gcc -c lab5.c cache.c replace_policy.c
+	gcc -O3 -o cache lab5.o cache.o replace_policy.o
 clean:
-	rm cache
+	rm cache *.o
